--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,6 @@
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
 			<version>3.11.0</version>
-			<exclusions>
-                 <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                      <artifactId>spring</artifactId>
-                </exclusion>
-            </exclusions>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -127,9 +120,9 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring</artifactId>
-			<version>2.5.6</version>
+			<version>2.5.5</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
              <version>1.5.9.RELEASE</version>
@@ -139,7 +132,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
              <version>1.5.9.RELEASE</version>
             <scope>test</scope>
-        </dependency>
+        </dependency> -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
@@ -173,6 +166,12 @@
 			<version>2.6</version>
 		</dependency>
 		
+		 <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
+        </dependency>
+		
 		
 		
 		<!--<dependency>
@@ -201,6 +200,37 @@
 		    <artifactId>xercesImpl</artifactId>
 		    <version>2.11.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.9.5</version>
+		</dependency>
+		<dependency>
+		    <groupId>net.sourceforge.jexcelapi</groupId>
+		    <artifactId>jxl</artifactId>
+		    <version>2.6.12</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20160810</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring</artifactId>
+			<version>2.5.6</version>
+		</dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+             <version>1.5.9.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+             <version>1.5.9.RELEASE</version>
+            <scope>test</scope>
+        </dependency> 
 
 		
 	</dependencies>
